--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,14 @@
     "require": {
         "php": ">=5.3.10",
         "symfony/framework-bundle": "~2.6",
-        "symfony/twig-bundle": "~2.6",
+        "symfony/dependency-injection": "~2.6",
+        "symfony/http-kernel": "~2.6",
+        "symfony/config": "~2.6",
         "symfony/yaml": "~2.6",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2"
     },
     "autoload": {
-        "psr-0": {"Shapecode\\Bundle\\CronBundle": ""}
-    },
-    "target-dir": "Shapecode/Bundle/CronBundle"
+        "psr-4": {"Shapecode\\Bundle\\CronBundle\\": ""}
+    }
 }
