--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,14 @@
     ],
     "require": {
         "php": ">=5.4",
-        "symfony/framework-bundle": "~2.6",
-        "symfony/dependency-injection": "~2.6",
-        "symfony/http-kernel": "~2.6",
-        "symfony/config": "~2.6",
-        "symfony/yaml": "~2.6",
-        "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "~1.2"
+        "symfony/framework-bundle": "~2.7",
+        "symfony/dependency-injection": "~2.7",
+        "symfony/http-kernel": "~2.7",
+        "symfony/config": "~2.7",
+        "symfony/console": "~2.7",
+        "doctrine/orm": "~2.5",
+        "doctrine/common": "~2.5",
+        "doctrine/doctrine-bundle": "~1.5"
     },
     "autoload": {
         "psr-4": {"Shapecode\\Bundle\\CronBundle\\": ""}
