clean up and improve code

--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,10 @@
     },
     "autoload": {
         "psr-4": {"Shapecode\\Bundle\\CronBundle\\": ""}
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.2-dev"
+        }
     }
 }
