--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,16 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
-        "symfony/framework-bundle": "~2.7",
-        "symfony/dependency-injection": "~2.7",
-        "symfony/http-kernel": "~2.7",
-        "symfony/config": "~2.7",
-        "symfony/console": "~2.7",
+        "php": ">=5.5.9",
+        "symfony/framework-bundle": "~2.8|~3.0",
+        "symfony/dependency-injection": "~2.8|~3.0",
+        "symfony/http-kernel": "~2.8|~3.0",
+        "symfony/config": "~2.8|~3.0",
+        "symfony/console": "~2.8|~3.0",
+        "symfony/process": "~2.8|~3.0",
         "doctrine/orm": "~2.5",
-        "doctrine/common": "~2.5",
-        "doctrine/doctrine-bundle": "~1.5"
+        "doctrine/common": "~2.6",
+        "doctrine/doctrine-bundle": "~1.6"
     },
     "autoload": {
         "psr-4": {
