--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
 
         "doctrine/orm": "~2.5",
         "doctrine/common": "~2.6",
-        "doctrine/doctrine-bundle": "~1.6"
+        "doctrine/doctrine-bundle": "~1.6",
+
+        "mtdowling/cron-expression": "~1.1"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "~2.8|~3.0"
@@ -58,7 +60,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-release/1.3": "1.3-dev"
+            "dev-release/1.3": "1.3-dev",
+            "dev-release/2.0": "2.0-dev"
         }
     },
     "minimum-stability": "dev",
