--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/config": "~2.8|~3.0",
         "symfony/console": "~2.8|~3.0",
         "symfony/process": "~2.8|~3.0",
+        "symfony/stopwatch": "~2.8|~3.0",
 
         "doctrine/orm": "~2.5",
         "doctrine/common": "~2.6",
