--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
     },
     "extra": {
         "branch-alias": {
+            "dev-release/2.1": "2.1-dev",
             "dev-release/2.0": "2.0-dev",
             "dev-release/1.3": "1.3-dev"
         }
