--- a/composer.json
+++ b/composer.json
@@ -32,14 +32,15 @@
     "require": {
         "php": "~5.5|~7.0",
 
-        "symfony/framework-bundle": "~2.8|~3.0",
-        "symfony/dependency-injection": "~2.8|~3.0",
-        "symfony/http-kernel": "~2.8|~3.0",
-        "symfony/config": "~2.8|~3.0",
-        "symfony/console": "~2.8|~3.0",
-        "symfony/process": "~2.8|~3.0",
-        "symfony/stopwatch": "~2.8|~3.0",
-        "symfony/event-dispatcher": "~2.8|~3.0",
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
+        "symfony/http-kernel": "~2.8|~3.0|~4.0",
+        "symfony/config": "~2.8|~3.0|~4.0",
+        "symfony/console": "~2.8|~3.0|~4.0",
+        "symfony/http-foundation": "~2.8|~3.0|~4.0",
+        "symfony/process": "~2.8|~3.0|~4.0",
+        "symfony/stopwatch": "~2.8|~3.0|~4.0",
+        "symfony/event-dispatcher": "~2.8|~3.0|~4.0",
 
         "doctrine/orm": "~2.5",
         "doctrine/common": "~2.6",
@@ -48,7 +49,7 @@
         "mtdowling/cron-expression": "~1.1"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "~2.8|~3.0"
+        "symfony/phpunit-bridge": "~2.8|~3.0|~4.0"
     },
     "autoload": {
         "psr-4": {
