--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,10 @@
 
         "mtdowling/cron-expression": "~1.1"
     },
+    "require-dev":{
+        "phpunit/phpunit": "^6.1",
+        "mockery/mockery": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "Shapecode\\Bundle\\CronBundle\\": "src/"
