--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -4,8 +4,7 @@ services:
         class: Shapecode\Bundle\CronBundle\Manager\CronJobManager
         public: true
         arguments:
-            - '@kernel'
-            - '@annotation_reader'
+            - '@event_dispatcher'
 
     # commands
     shapecode_cron.abstract:
@@ -87,3 +86,18 @@ services:
         class: Shapecode\Bundle\CronBundle\EventListener\EntitySubscriber
         tags:
             - { name: doctrine.event_subscriber }
+
+    shapecode_cron.event_listener.annotation_job_loader:
+        class: Shapecode\Bundle\CronBundle\EventListener\AnnotationJobLoaderListener
+        public: true
+        arguments:
+            - '@kernel'
+            - '@annotations.reader'
+        tags:
+            - { name: kernel.event_subscriber }
+
+    shapecode_cron.event_listener.service_job_loader:
+        class: Shapecode\Bundle\CronBundle\EventListener\ServiceJobLoaderListener
+        public: true
+        tags:
+            - { name: kernel.event_subscriber }
