--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0-dev"
+            "dev-release/3.0": "3.0-dev"
         }
     },
     "minimum-stability": "dev",
