--- a/composer.json
+++ b/composer.json
@@ -34,26 +34,26 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0",
+        "php": "~7.1",
 
-        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
-        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
-        "symfony/http-kernel": "~2.8|~3.0|~4.0",
-        "symfony/config": "~2.8|~3.0|~4.0",
-        "symfony/console": "~2.8|~3.0|~4.0",
-        "symfony/http-foundation": "~2.8|~3.0|~4.0",
-        "symfony/process": "~2.8|~3.0|~4.0",
-        "symfony/stopwatch": "~2.8|~3.0|~4.0",
-        "symfony/event-dispatcher": "~2.8|~3.0|~4.0",
+        "symfony/framework-bundle": "~3.4|~4.0",
+        "symfony/dependency-injection": "~3.4|~4.0",
+        "symfony/http-kernel": "~3.4|~4.0",
+        "symfony/config": "~3.4|~4.0",
+        "symfony/console": "~3.4|~4.0",
+        "symfony/http-foundation": "~3.4|~4.0",
+        "symfony/process": "~3.4|~4.0",
+        "symfony/stopwatch": "~3.4|~4.0",
+        "symfony/event-dispatcher": "~3.4|~4.0",
 
-        "doctrine/orm": "~2.5",
-        "doctrine/common": "~2.6",
-        "doctrine/doctrine-bundle": "~1.6",
+        "doctrine/orm": "~2.6",
+        "doctrine/common": "~2.8",
+        "doctrine/doctrine-bundle": "~1.9",
 
         "mtdowling/cron-expression": "~1.1"
     },
     "require-dev":{
-        "phpunit/phpunit": "^6.1",
+        "phpunit/phpunit": "^6.1|^7.0",
         "mockery/mockery": "^1.0"
     },
     "suggest": {
@@ -71,7 +71,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-develop": "3.3-dev"
+            "dev-master": "4.0-dev"
         }
     },
     "minimum-stability": "dev",
