--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
     },
     "require-dev":{
         "phpunit/phpunit": "^6.1|^7.0",
-        "mockery/mockery": "^1.0"
+        "mockery/mockery": "^1.0",
+        "sonata-project/admin-bundle": "^3.35"
     },
     "suggest": {
         "sonata-project/admin-bundle": "to manage cronjobs in the sonata admin panel"
