--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-develop": "3.3-dev"
+            "dev-release/3.3": "3.3-dev"
         }
     },
     "minimum-stability": "dev",
