--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "shapecode/cron-bundle",
-    "description": "This bundle provides scheduled execution of Symfony2 commands",
+    "description": "This bundle provides scheduled execution of Symfony commands",
     "keywords": [
         "cron",
         "cronjob",
