--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "shapecode/cron-bundle",
-    "description": "This bundle provides scheduled execution of Symfony2 commands",
+    "description": "This bundle provides scheduled execution of Symfony commands",
     "keywords": [
         "cron",
         "cronjob",
@@ -72,7 +72,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "4.0-dev"
+            "dev-master": "4.0-dev",
+            "dev-release/3.3": "3.3-dev"
         }
     },
     "minimum-stability": "dev",
