--- a/composer.json
+++ b/composer.json
@@ -54,11 +54,10 @@
     },
     "require-dev":{
         "phpunit/phpunit": "^6.1|^7.0",
-        "mockery/mockery": "^1.0",
-        "sonata-project/admin-bundle": "^3.35"
+        "mockery/mockery": "^1.0"
     },
     "suggest": {
-        "sonata-project/admin-bundle": "to manage cronjobs in the sonata admin panel"
+        "shapecode/cron-sonata-admin-bundle": "to manage cronjobs in the sonata admin panel"
     },
     "autoload": {
         "psr-4": {
