--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
-
+{
     "name": "shapecode/cron-bundle",
-    "description": "This bundle provides scheduled execution of Symfony commands",
+    "description": "This bundle provides scheduled execution of Symfony2 commands",
     "keywords": [
         "cron",
         "cronjob",
@@ -34,27 +34,28 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0",
+        "php": "~7.1",
 
-        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
-        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
-        "symfony/http-kernel": "~2.8|~3.0|~4.0",
-        "symfony/config": "~2.8|~3.0|~4.0",
-        "symfony/console": "~2.8|~3.0|~4.0",
-        "symfony/http-foundation": "~2.8|~3.0|~4.0",
-        "symfony/process": "~2.8|~3.0|~4.0",
-        "symfony/stopwatch": "~2.8|~3.0|~4.0",
-        "symfony/event-dispatcher": "~2.8|~3.0|~4.0",
+        "symfony/framework-bundle": "~3.4|~4.0",
+        "symfony/dependency-injection": "~3.4|~4.0",
+        "symfony/http-kernel": "~3.4|~4.0",
+        "symfony/config": "~3.4|~4.0",
+        "symfony/console": "~3.4|~4.0",
+        "symfony/http-foundation": "~3.4|~4.0",
+        "symfony/process": "~3.4|~4.0",
+        "symfony/stopwatch": "~3.4|~4.0",
+        "symfony/event-dispatcher": "~3.4|~4.0",
 
-        "doctrine/orm": "~2.5",
-        "doctrine/common": "~2.6",
-        "doctrine/doctrine-bundle": "~1.6",
+        "doctrine/orm": "~2.6",
+        "doctrine/common": "~2.8",
+        "doctrine/doctrine-bundle": "~1.9",
 
         "mtdowling/cron-expression": "~1.1"
     },
     "require-dev":{
-        "phpunit/phpunit": "^6.1",
-        "mockery/mockery": "^1.0"
+        "phpunit/phpunit": "^6.1|^7.0",
+        "mockery/mockery": "^1.0",
+        "sonata-project/admin-bundle": "^3.35"
     },
     "suggest": {
         "sonata-project/admin-bundle": "to manage cronjobs in the sonata admin panel"
@@ -71,85 +72,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0-dev"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
-}
-
-    "name": "shapecode/cron-bundle",
-    "description": "This bundle provides scheduled execution of Symfony commands",
-    "keywords": [
-        "cron",
-        "cronjob",
-        "command",
-        "execute",
-        "interval",
-        "schedule",
-        "shapecode",
-        "symfony",
-        "time",
-        "bundle"
-    ],
-    "type": "symfony-bundle",
-    "license": "MIT",
-    "homepage": "https://github.com/shapecode/cron-bundle",
-    "support": {
-        "email": "support@shapeocode.de",
-        "issues": "https://github.com/shapecode/cron-bundle/issues",
-        "source": "https://github.com/shapecode/cron-bundle/releases",
-        "wiki": "https://github.com/shapecode/cron-bundle/wiki"
-    },
-    "authors": [
-        {
-            "name": "Nikita Loges",
-            "homepage": "https://nikita-loges.de",
-            "email": "develop@nikita-loges.de"
-        },
-        {
-            "name": "Contributors",
-            "homepage": "https://github.com/shapecode/cron-bundle/graphs/contributors"
-        }
-    ],
-    "require": {
-        "php": "~5.6|~7.0",
-
-        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
-        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
-        "symfony/http-kernel": "~2.8|~3.0|~4.0",
-        "symfony/config": "~2.8|~3.0|~4.0",
-        "symfony/console": "~2.8|~3.0|~4.0",
-        "symfony/http-foundation": "~2.8|~3.0|~4.0",
-        "symfony/process": "~2.8|~3.0|~4.0",
-        "symfony/stopwatch": "~2.8|~3.0|~4.0",
-        "symfony/event-dispatcher": "~2.8|~3.0|~4.0",
-
-        "doctrine/orm": "~2.5",
-        "doctrine/common": "~2.6",
-        "doctrine/doctrine-bundle": "~1.6",
-
-        "mtdowling/cron-expression": "~1.1"
-    },
-    "require-dev":{
-        "phpunit/phpunit": "^6.1",
-        "mockery/mockery": "^1.0"
-    },
-    "suggest": {
-        "sonata-project/admin-bundle": "to manage cronjobs in the sonata admin panel"
-    },
-    "autoload": {
-        "psr-4": {
-            "Shapecode\\Bundle\\CronBundle\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Shapecode\\Bundle\\CronBundle\\Tests\\": "tests/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
+            "dev-master": "4.0-dev",
             "dev-release/3.0": "3.3-dev"
         }
     },
