--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     "authors": [
         {
             "name": "Nikita Loges",
-            "homepage": "https://nikita-loges.de",
-            "email": "develop@nikita-loges.de"
+            "homepage": "https://loges.one",
+            "email": "dev@loges.one"
         },
         {
             "name": "Contributors",
