--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,16 @@
         "mtdowling/cron-expression": "~1.1"
     },
     "require-dev":{
-        "phpunit/phpunit": "^6.1|^7.0",
+        "doctrine/coding-standard": "^6.0",
+        "roave/security-advisories": "dev-master",
+        "squizlabs/php_codesniffer": "^3.4",
+        "phpstan/phpstan": "^0.11.16",
+        "phpstan/phpstan-deprecation-rules": "^0.11.2",
+        "phpstan/phpstan-phpunit": "^0.11.2",
+        "phpstan/phpstan-strict-rules": "^0.11.1",
+        "maglnet/composer-require-checker": "^2.0",
+        "phpunit/phpunit": "^8.4",
+        "symfony/var-dumper": "^4.3",
         "mockery/mockery": "^1.0"
     },
     "suggest": {
@@ -68,6 +77,19 @@
         "psr-4": {
             "Shapecode\\Bundle\\CronBundle\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@crc",
+            "@cs-fix",
+            "@cs-check",
+            "@phpstan"
+        ],
+        "phpstan": "./vendor/bin/phpstan analyse ./src",
+        "crc": "./vendor/bin/composer-require-checker --config-file=./composer-require-checker.json",
+        "phpunit": "./vendor/bin/phpunit",
+        "cs-fix": "./vendor/bin/phpcbf",
+        "cs-check": "./vendor/bin/phpcs -s"
     },
     "extra": {
         "branch-alias": {
