--- a/composer.json
+++ b/composer.json
@@ -34,17 +34,17 @@
         }
     ],
     "require": {
-        "php": "~7.2",
+        "php": "~7.3",
 
-        "symfony/framework-bundle": "~3.4|~4.0",
-        "symfony/dependency-injection": "~3.4|~4.0",
-        "symfony/http-kernel": "~3.4|~4.0",
-        "symfony/config": "~3.4|~4.0",
-        "symfony/console": "~3.4|~4.0",
-        "symfony/http-foundation": "~3.4|~4.0",
-        "symfony/process": "~3.4|~4.0",
-        "symfony/stopwatch": "~3.4|~4.0",
-        "symfony/event-dispatcher": "~3.4|~4.0",
+        "symfony/framework-bundle": "^3.4|^4.4|^5.0",
+        "symfony/dependency-injection": "^3.4|^4.4|^5.0",
+        "symfony/http-kernel": "^3.4|^4.4|^5.0",
+        "symfony/config": "^3.4|^4.4|^5.0",
+        "symfony/console": "^3.4|^4.4|^5.0",
+        "symfony/http-foundation": "^3.4|^4.4|^5.0",
+        "symfony/process": "^3.4|^4.4|^5.0",
+        "symfony/stopwatch": "^3.4|^4.4|^5.0",
+        "symfony/event-dispatcher": "^3.4|^4.4|^5.0",
 
         "doctrine/orm": "~2.6",
         "doctrine/common": "~2.8",
