--- a/composer.json
+++ b/composer.json
@@ -46,11 +46,14 @@
         "symfony/stopwatch": "^3.4|^4.4|^5.0",
         "symfony/event-dispatcher": "^3.4|^4.4|^5.0",
 
-        "doctrine/orm": "~2.6",
-        "doctrine/common": "~2.8",
-        "doctrine/doctrine-bundle": "~1.9",
+        "doctrine/annotations": "^1.8",
+        "doctrine/event-manager": "^1.1",
+        "doctrine/collections": "^1.6",
+        "doctrine/persistence": "^1.2",
+        "doctrine/orm": "^2.6",
+        "doctrine/common": "^2.8",
 
-        "mtdowling/cron-expression": "~1.1"
+        "mtdowling/cron-expression": "^1.1"
     },
     "require-dev":{
         "doctrine/coding-standard": "^6.0",
@@ -63,7 +66,8 @@
         "maglnet/composer-require-checker": "^2.0",
         "phpunit/phpunit": "^8.4",
         "symfony/var-dumper": "^4.3",
-        "mockery/mockery": "^1.0"
+        "mockery/mockery": "^1.0",
+        "icanhazstring/composer-unused": "^0.6.2"
     },
     "suggest": {
         "shapecode/cron-sonata-admin-bundle": "to manage cronjobs in the sonata admin panel"
