--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,9 +4,10 @@ includes:
     - vendor/phpstan/phpstan-deprecation-rules/rules.neon
     #- vendor/phpstan/phpstan-phpunit/extension.neon
     - vendor/phpstan/phpstan-phpunit/rules.neon
+    - phpstan-baseline.neon
 
 parameters:
 	level: max
 	paths:
 		- src
-		- test
+		- tests
