--- a/composer.json
+++ b/composer.json
@@ -36,15 +36,15 @@
     "require": {
         "php": "~7.3",
 
-        "symfony/framework-bundle": "^3.4|^4.4|^5.0",
-        "symfony/dependency-injection": "^3.4|^4.4|^5.0",
-        "symfony/http-kernel": "^3.4|^4.4|^5.0",
-        "symfony/config": "^3.4|^4.4|^5.0",
-        "symfony/console": "^3.4|^4.4|^5.0",
-        "symfony/http-foundation": "^3.4|^4.4|^5.0",
-        "symfony/process": "^3.4|^4.4|^5.0",
-        "symfony/stopwatch": "^3.4|^4.4|^5.0",
-        "symfony/event-dispatcher": "^3.4|^4.4|^5.0",
+        "symfony/framework-bundle": "^4.4|^5.0",
+        "symfony/dependency-injection": "^4.4|^5.0",
+        "symfony/http-kernel": "^4.4|^5.0",
+        "symfony/config": "^4.4|^5.0",
+        "symfony/console": "^4.4|^5.0",
+        "symfony/http-foundation": "^4.4|^5.0",
+        "symfony/process": "^4.4|^5.0",
+        "symfony/stopwatch": "^4.4|^5.0",
+        "symfony/event-dispatcher": "^4.4|^5.0",
 
         "doctrine/annotations": "^1.8",
         "doctrine/event-manager": "^1.1",
