--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,8 +5,7 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.8/phpunit.xsd"
          backupGlobals="false"
          colors="true"
-         processIsolation="false"
-         bootstrap="tests/bootstrap.php">
+         processIsolation="false">
     <php>
         <ini name="error_reporting" value="-1"/>
         <server name="KERNEL_CLASS" value="AppKernel"/>
