--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,8 @@
         "phpunit/phpunit": "^8.4",
         "symfony/var-dumper": "^4.3",
         "icanhazstring/composer-unused": "^0.6.2",
-        "dg/bypass-finals": "^1.1"
+        "dg/bypass-finals": "^1.1",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.1"
     },
     "suggest": {
         "shapecode/cron-sonata-admin-bundle": "to manage cronjobs in the sonata admin panel"
