--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,8 +13,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        php-versions: [ '7.4', '8.0' ]
+        
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
 
     - name: Validate composer.json and composer.lock
       run: composer validate
