--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         }
     ],
     "require": {
-        "php": "~7.2",
+        "php": "^7.4|^8.0",
 
         "symfony/framework-bundle": "^4.4|^5.0",
         "symfony/dependency-injection": "^4.4|^5.0",
@@ -50,8 +50,8 @@
         "doctrine/annotations": "^1.8",
         "doctrine/event-manager": "^1.1",
         "doctrine/collections": "^1.6",
-        "doctrine/persistence": "^1.2",
-        "doctrine/orm": "^2.6",
+        "doctrine/persistence": "^1.2|^2.0",
+        "doctrine/orm": "^2.6|^3.0",
         "doctrine/common": "^2.8",
 
         "dragonmantank/cron-expression": "^3.0"
@@ -101,18 +101,19 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-integration": "4.1-dev"
+            "dev-master": "5.0-dev"
         }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "platform": {
-            "php": "7.3.13"
-        },
         "preferred-install": "dist"
     },
     "funding": [
+        {
+            "type": "github",
+            "url": "http://github.com/sponsors/nicklog"
+        },
         {
             "type": "paypal",
             "url": "http://paypal.me/nloges"
