--- a/composer.json
+++ b/composer.json
@@ -50,8 +50,8 @@
         "doctrine/annotations": "^1.8",
         "doctrine/event-manager": "^1.1",
         "doctrine/collections": "^1.6",
-        "doctrine/persistence": "^1.2",
-        "doctrine/orm": "^2.6",
+        "doctrine/persistence": "^1.2|^2.0",
+        "doctrine/orm": "^2.6|^3.0",
 
         "mtdowling/cron-expression": "^1.1"
     },
