Added attribute as alternate way of specifying cron job

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -20,3 +20,4 @@ services:
 
     # service
     Shapecode\Bundle\CronBundle\Service\CommandHelper: ~
+    Shapecode\Bundle\CronBundle\Service\AttributeReader: ~
