--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "symfony/process": "^4.4|^5.0",
         "symfony/stopwatch": "^4.4|^5.0",
         "symfony/event-dispatcher": "^4.4|^5.0",
-        "symfony/event-dispatcher-contracts": "^1.1|^2.0",
+        "symfony/event-dispatcher-contracts": "^1.1|^2.0|^3.0",
 
         "doctrine/annotations": "^1.8",
         "doctrine/event-manager": "^1.1",
@@ -57,18 +57,17 @@
     },
     "require-dev":{
         "icanhazstring/composer-unused": "~0.7",
-        "doctrine/coding-standard": "~8.2",
+        "doctrine/coding-standard": "~9.0",
         "roave/security-advisories": "dev-master",
-        "squizlabs/php_codesniffer": "~3.4",
-        "phpstan/phpstan": "~0.12",
-        "phpstan/phpstan-deprecation-rules": "~0.12",
-        "phpstan/phpstan-phpunit": "~0.12",
-        "phpstan/phpstan-strict-rules": "~0.12",
-        "phpstan/phpstan-symfony": "~0.12",
-        "phpstan/phpstan-doctrine": "~0.12",
-        "phpunit/phpunit": "~9.0",
-        "symfony/var-dumper": "~5.0",
-        "dg/bypass-finals": "~1.1"
+        "squizlabs/php_codesniffer": "~3.6",
+        "phpstan/phpstan": "~1.2",
+        "phpstan/phpstan-deprecation-rules": "~1.0",
+        "phpstan/phpstan-phpunit": "~1.0",
+        "phpstan/phpstan-strict-rules": "~1.1",
+        "phpstan/phpstan-symfony": "~1.0",
+        "phpstan/phpstan-doctrine": "~1.0",
+        "phpunit/phpunit": "~9.5",
+        "symfony/var-dumper": "~5.3"
     },
     "autoload": {
         "psr-4": {
