--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: composer install --prefer-dist --no-progress --no-suggest
       - run: composer validate
-      - uses: docker://phpga/composer-require-checker-ga
+      - run: composer crc
       - run: composer unuse
       - run: composer cs-check
       - run: composer phpstan
