--- a/composer.json
+++ b/composer.json
@@ -34,17 +34,17 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
 
-        "symfony/framework-bundle": "^4.4|^5.0",
-        "symfony/dependency-injection": "^4.4|^5.0",
-        "symfony/http-kernel": "^4.4|^5.0",
-        "symfony/config": "^4.4|^5.0",
-        "symfony/console": "^4.4|^5.0",
-        "symfony/http-foundation": "^4.4|^5.0",
-        "symfony/process": "^4.4|^5.0",
-        "symfony/stopwatch": "^4.4|^5.0",
-        "symfony/event-dispatcher": "^4.4|^5.0",
+        "symfony/framework-bundle": "^4.4|^5.4|^6.0",
+        "symfony/dependency-injection": "^4.4|^5.4|^6.0",
+        "symfony/http-kernel": "^4.4|^5.4|^6.0",
+        "symfony/config": "^4.4|^5.4|^6.0",
+        "symfony/console": "^4.4|^5.4|^6.0",
+        "symfony/http-foundation": "^4.4|^5.4|^6.0",
+        "symfony/process": "^4.4|^5.4|^6.0",
+        "symfony/stopwatch": "^4.4|^5.4|^6.0",
+        "symfony/event-dispatcher": "^4.4|^5.4|^6.0",
         "symfony/event-dispatcher-contracts": "^1.1|^2.0|^3.0",
 
         "doctrine/annotations": "^1.8",
@@ -67,7 +67,7 @@
         "phpstan/phpstan-symfony": "~1.0",
         "phpstan/phpstan-doctrine": "~1.0",
         "phpunit/phpunit": "~9.5",
-        "symfony/var-dumper": "~5.3",
+        "symfony/var-dumper": "~6.0",
         "maglnet/composer-require-checker": "^3.5"
     },
     "autoload": {
@@ -97,7 +97,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "5.0-dev"
+            "dev-master": "6.0-dev"
         }
     },
     "minimum-stability": "dev",
