Add fix from #50

--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "dragonmantank/cron-expression": "^3.1"
     },
     "require-dev":{
-        "icanhazstring/composer-unused": "~0.7",
+        "icanhazstring/composer-unused": "^0.7",
         "doctrine/coding-standard": "~9.0",
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "~3.6",
@@ -86,7 +86,7 @@
             "@phpstan",
             "@phpunit"
         ],
-        "phpstan": "phpstan analyse --ansi",
+        "phpstan": "phpstan analyse --memory-limit=-1 --ansi",
         "phpstan-update-baseline": "phpstan analyse --ansi --generate-baseline phpstan-baseline.neon",
         "phpunit": "phpunit --colors=always",
         "cs-check": "phpcs -s",
@@ -101,7 +101,11 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "icanhazstring/composer-unused": true
+        }
     },
     "funding": [
         {
