made multiple updates

--- a/src/Resources/config/routing.yml
+++ b/src/Resources/config/routing.yml
@@ -1,4 +1,4 @@
 cronjob_run:
-    path:     /run
-    defaults: { _controller: 'ShapecodeCronBundle:CronJob:run' }
-    methods:  [GET]
+    path: /run
+    controller: Shapecode\Bundle\CronBundle\Controller\CronJobController
+    methods: GET
