--- a/composer.json
+++ b/composer.json
@@ -36,40 +36,42 @@
     "require": {
         "php": "^8.1",
 
-        "symfony/framework-bundle": "^4.4|^5.4|^6.0",
-        "symfony/dependency-injection": "^4.4|^5.4|^6.0",
-        "symfony/http-kernel": "^4.4|^5.4|^6.0",
-        "symfony/config": "^4.4|^5.4|^6.0",
-        "symfony/console": "^4.4|^5.4|^6.0",
-        "symfony/http-foundation": "^4.4|^5.4|^6.0",
-        "symfony/process": "^4.4|^5.4|^6.0",
-        "symfony/stopwatch": "^4.4|^5.4|^6.0",
-        "symfony/event-dispatcher": "^4.4|^5.4|^6.0",
-        "symfony/event-dispatcher-contracts": "^1.1|^2.0|^3.0",
+        "symfony/framework-bundle": "^5.4|^6.0",
+        "symfony/dependency-injection": "^5.4|^6.0",
+        "symfony/http-kernel": "^5.4|^6.0",
+        "symfony/config": "^5.4|^6.0",
+        "symfony/console": "^5.4|^6.0",
+        "symfony/http-foundation": "^5.4|^6.0",
+        "symfony/process": "^5.4|^6.0",
+        "symfony/stopwatch": "^5.4|^6.0",
+        "symfony/event-dispatcher": "^5.4|^6.0",
+        "symfony/event-dispatcher-contracts": "^2.0|^3.0",
 
+        "doctrine/doctrine-bundle": "^2.6",
         "doctrine/annotations": "^1.8",
         "doctrine/event-manager": "^1.1",
         "doctrine/collections": "^1.6",
-        "doctrine/persistence": "^1.2|^2.0",
-        "doctrine/orm": "^2.6|^3.0",
+        "doctrine/persistence": "^2.0|^3.0",
+        "doctrine/orm": "^2.12|^3.0",
+        "doctrine/dbal": "^3.3",
 
         "dragonmantank/cron-expression": "^3.1"
     },
     "require-dev":{
-        "icanhazstring/composer-unused": "^0.7",
+        "icanhazstring/composer-unused": "^0.8",
         "doctrine/coding-standard": "~9.0",
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "~3.6",
         "maglnet/composer-require-checker": "^3.8|^4.0",
-        "phpstan/phpstan": "~1.2",
+        "phpstan/phpstan": "~1.7",
         "phpstan/phpstan-deprecation-rules": "~1.0",
-        "phpstan/phpstan-phpunit": "~1.0",
-        "phpstan/phpstan-strict-rules": "~1.1",
-        "phpstan/phpstan-symfony": "~1.0",
-        "phpstan/phpstan-doctrine": "~1.0",
+        "phpstan/phpstan-phpunit": "~1.1",
+        "phpstan/phpstan-strict-rules": "~1.2",
+        "phpstan/phpstan-symfony": "~1.1",
+        "phpstan/phpstan-doctrine": "~1.3",
         "phpunit/phpunit": "~9.5",
         "symfony/var-dumper": "~6.0",
-        "maglnet/composer-require-checker": "^3.5"
+        "maglnet/composer-require-checker": "^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -94,7 +96,7 @@
         "phpunit": "phpunit --colors=always",
         "cs-check": "phpcs -s",
         "cs-fix": "phpcbf",
-        "unuse": "composer unused --excludeDir=vendor --excludeDir=var --excludeDir=node_modules --ansi"
+        "unuse": "vendor/bin/composer-unused"
     },
     "extra": {
         "branch-alias": {
