--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         "doctrine/orm": "^2.12|^3.0",
         "doctrine/dbal": "^3.3",
 
-        "dragonmantank/cron-expression": "^3.1"
+        "dragonmantank/cron-expression": "^3.1",
+        "lcobucci/clock": "^2.2"
     },
     "require-dev":{
         "icanhazstring/composer-unused": "^0.8",
