--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "doctrine/collections": "^1.6",
         "doctrine/persistence": "^2.0|^3.0",
         "doctrine/orm": "^2.12|^3.0",
-        "doctrine/dbal": "^3.3",
+        "doctrine/dbal": "^2.13|^3.3",
 
         "dragonmantank/cron-expression": "^3.1",
         "lcobucci/clock": "^2.2",
