--- a/composer.json
+++ b/composer.json
@@ -45,35 +45,35 @@
         "symfony/process": "^5.4|^6.0",
         "symfony/stopwatch": "^5.4|^6.0",
         "symfony/event-dispatcher": "^5.4|^6.0",
-        "symfony/event-dispatcher-contracts": "^2.0|^3.0",
+        "symfony/event-dispatcher-contracts": "^2.5|^3.2",
 
-        "doctrine/doctrine-bundle": "^2.6",
-        "doctrine/event-manager": "^1.1",
-        "doctrine/collections": "^1.6",
-        "doctrine/persistence": "^2.0|^3.0",
-        "doctrine/orm": "^2.12|^3.0",
+        "doctrine/doctrine-bundle": "^2.8",
+        "doctrine/event-manager": "^1.2|^2.0",
+        "doctrine/collections": "^1.8|^2.1",
+        "doctrine/persistence": "^2.5|^3.1",
+        "doctrine/orm": "^2.14|^3.0",
         "doctrine/dbal": "^2.13|^3.3",
 
-        "dragonmantank/cron-expression": "^3.1",
-        "lcobucci/clock": "^2.2",
-        "stella-maris/clock": "^0.1",
-        "ramsey/collection": "^1.2"
+        "psr/clock": "^1.0",
+
+        "dragonmantank/cron-expression": "^3.3",
+        "lcobucci/clock": "^3.0",
+        "ramsey/collection": "^2.0"
     },
     "require-dev":{
         "icanhazstring/composer-unused": "^0.8",
-        "doctrine/coding-standard": "~9.0",
+        "doctrine/coding-standard": "^11.0",
         "roave/security-advisories": "dev-master",
-        "squizlabs/php_codesniffer": "~3.6",
-        "maglnet/composer-require-checker": "^3.8|^4.0",
-        "phpstan/phpstan": "~1.7",
-        "phpstan/phpstan-deprecation-rules": "~1.0",
-        "phpstan/phpstan-phpunit": "~1.1",
-        "phpstan/phpstan-strict-rules": "~1.2",
-        "phpstan/phpstan-symfony": "~1.1",
-        "phpstan/phpstan-doctrine": "~1.3",
-        "phpunit/phpunit": "~9.5",
-        "symfony/var-dumper": "~6.0",
-        "maglnet/composer-require-checker": "^4.0"
+        "squizlabs/php_codesniffer": "^3.7",
+        "maglnet/composer-require-checker": "^4.5",
+        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-strict-rules": "^1.4",
+        "phpstan/phpstan-symfony": "^1.2",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpunit/phpunit": "^9.5",
+        "symfony/var-dumper": "^6.2"
     },
     "autoload": {
         "psr-4": {
