--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,10 +16,16 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: [ '8.1' ]
+        php-versions: [ '8.3', '8.3' ]
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install PHP
+        uses: shivammathur/setup-php@v2
+        with:
+            php-version: ${{ matrix.php-versions }}
+
       - run: composer install --prefer-dist --no-progress --no-suggest
       - run: composer validate
       - run: composer crc
