--- a/composer.json
+++ b/composer.json
@@ -34,46 +34,45 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
 
-        "symfony/framework-bundle": "^5.4|^6.0",
-        "symfony/dependency-injection": "^5.4|^6.0",
-        "symfony/http-kernel": "^5.4|^6.0",
-        "symfony/config": "^5.4|^6.0",
-        "symfony/console": "^5.4|^6.0",
-        "symfony/http-foundation": "^5.4|^6.0",
-        "symfony/process": "^5.4|^6.0",
-        "symfony/stopwatch": "^5.4|^6.0",
-        "symfony/event-dispatcher": "^5.4|^6.0",
-        "symfony/event-dispatcher-contracts": "^2.5|^3.2",
+        "symfony/framework-bundle": "^6.4 || ^7.0",
+        "symfony/dependency-injection": "^6.4 || ^7.0",
+        "symfony/http-kernel": "^6.4 || ^7.0",
+        "symfony/config": "^6.4 || ^7.0",
+        "symfony/console": "^6.4 || ^7.0",
+        "symfony/http-foundation": "^6.4 || ^7.0",
+        "symfony/process": "^6.4 || ^7.0",
+        "symfony/stopwatch": "^6.4 || ^7.0",
+        "symfony/event-dispatcher": "^6.4 || ^7.0",
+        "symfony/event-dispatcher-contracts": "^3.4",
 
-        "doctrine/doctrine-bundle": "^2.10",
+        "doctrine/doctrine-bundle": "^2.11",
         "doctrine/event-manager": "^2.0",
         "doctrine/collections": "^2.1",
         "doctrine/persistence": "^3.2",
-        "doctrine/orm": "^2.16",
-        "doctrine/dbal": "^3.6",
+        "doctrine/orm": "^2.17",
+        "doctrine/dbal": "^3.7",
 
         "psr/clock": "^1.0",
 
         "dragonmantank/cron-expression": "^3.3",
-        "lcobucci/clock": "^3.1",
         "ramsey/collection": "^2.0"
     },
     "require-dev":{
         "icanhazstring/composer-unused": "^0.8",
-        "doctrine/coding-standard": "^11.0",
+        "doctrine/coding-standard": "^12.0",
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "^3.7",
-        "maglnet/composer-require-checker": "^4.5",
-        "phpstan/phpstan": "^1.9",
+        "maglnet/composer-require-checker": "^4.7",
+        "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "phpstan/phpstan-phpunit": "^1.3",
-        "phpstan/phpstan-strict-rules": "^1.4",
-        "phpstan/phpstan-symfony": "^1.2",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/phpstan-symfony": "^1.3",
         "phpstan/phpstan-doctrine": "^1.3",
-        "phpunit/phpunit": "^9.5",
-        "symfony/var-dumper": "^6.2"
+        "phpunit/phpunit": "^10.5",
+        "symfony/var-dumper": "^7.0"
     },
     "autoload": {
         "psr-4": {
