--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,8 @@
         "phpstan/phpstan-symfony": "^1.3",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpunit/phpunit": "^10.5",
-        "symfony/var-dumper": "^7.0"
+        "symfony/var-dumper": "^7.0",
+        "symfony/clock": "^7.0"
     },
     "autoload": {
         "psr-4": {
