--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,8 @@
         "doctrine/event-manager": "^2.0",
         "doctrine/collections": "^2.1",
         "doctrine/persistence": "^3.2",
-        "doctrine/orm": "^2.17",
-        "doctrine/dbal": "^3.7",
+        "doctrine/orm": "^2.17 || ^3.0",
+        "doctrine/dbal": "^3.7 || ^4.0",
 
         "psr/clock": "^1.0",
 
