--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,6 @@
         "symfony/event-dispatcher-contracts": "^3.5",
 
         "doctrine/doctrine-bundle": "^2.13",
-        "doctrine/event-manager": "^2.0",
         "doctrine/collections": "^2.2",
         "doctrine/persistence": "^3.3",
         "doctrine/orm": "^2.20 || ^3.3",
@@ -60,11 +59,10 @@
         "ramsey/collection": "^2.0"
     },
     "require-dev":{
-        "icanhazstring/composer-unused": "^0.8",
+        "shipmonk/composer-dependency-analyser": "^1.7",
         "doctrine/coding-standard": "^12.0",
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "^3.10",
-        "maglnet/composer-require-checker": "^4.13",
         "phpstan/phpstan": "^1.12",
         "phpstan/phpstan-deprecation-rules": "^1.2",
         "phpstan/phpstan-phpunit": "^1.4",
@@ -87,18 +85,17 @@
     },
     "scripts": {
         "check": [
-            "@unuse",
+            "@cda",
             "@cs-check",
             "@phpstan",
             "@phpunit"
         ],
-        "crc": "composer-require-checker --config-file=./composer-require-checker.json --ansi",
+        "cda": "vendor/bin/composer-dependency-analyser --config=./composer-dependency-analyser.php",
         "phpstan": "phpstan analyse --memory-limit=-1 --ansi",
         "phpstan-update-baseline": "phpstan analyse --ansi --generate-baseline phpstan-baseline.neon",
         "phpunit": "phpunit --colors=always",
         "cs-check": "phpcs -s",
-        "cs-fix": "phpcbf",
-        "unuse": "vendor/bin/composer-unused"
+        "cs-fix": "phpcbf"
     },
     "extra": {
         "branch-alias": {
